Found a text-align bug

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 html {
-  margin: 1.5rem;
   scroll-behavior: smooth;
   font-family: 'Poiret One', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -14,10 +13,18 @@ html {
 
 }
 
+
+main {
+  scroll-snap-type: y mandatory; 
+}
+
 section {
+  scroll-snap-align: start; 
+  scroll-margin-top: 4rem; 
   justify-content: center;
   align-items: center;
-  padding-top: 4rem;
+  height: 100vh;
+  padding-top: 4rem; 
 }
 
 code {
